# claude-plugin-screenshot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.devcontainer/: Dockerfile  create-env.sh  devcontainer.json  init-firewall.sh
commands/: screenshot.md
skills/screenshot/: SKILL.md
src/screenshot/: __main__.py  browser.py  capture.py  cli.py  output.py  sessions.py  viewports.py
tests/: conftest.py  test_cli.py  test_output.py  test_sessions.py  test_viewports.py
