[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenshot"
version = "0.1.0"
description = "Capture screenshots of web pages using Playwright"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
]

[project.scripts]
screenshot = "screenshot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
